k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-todo-app-service
  labels:
    app: react-todo-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: react-todo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
